--- a/index.html
+++ b/index.html
@@ -14,13 +14,8 @@
           <div class="item">
             <img :src="slides[Activeimg].image" alt="" />
             <div class="text">
-              <h3>Spiderman</h3>
-              <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et
-                temporibus voluptatum suscipit tempore aliquid deleniti aut
-                veniam inventore eligendi ex ad ullam, cumque provident totam
-                omnis, magnam dolores dolorum corporis.
-              </p>
+              <h3 v-text="slides[Activeimg].title"></h3>
+              <p v-text="slides[Activeimg].text"></p>
             </div>
           </div>
 
@@ -46,7 +41,6 @@
         </div>
       </div>
     </div>
-
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
   </body>
